@@ -17,7 +17,7 @@ if (wxWidgets_FOUND)
 
   target_link_libraries(inputwx ${wxWidgets_LIBRARIES} ${spark_libs})
 
-  set_target_properties(inputwx PROPERTIES COMPILE_FLAGS ${wxWidgets_CXX_FLAGS})
+  set_target_properties(inputwx PROPERTIES COMPILE_FLAGS "${wxWidgets_CXX_FLAGS}")
   if (NOT APPLE)
      set_target_properties(inputwx PROPERTIES VERSION 0.0.0 SOVERSION 0)
   endif (NOT APPLE)
